# simple_web_app

./: .gitignore  README.md  app.py  pyproject.toml  report.html  requirements.txt
.github/workflows/: deploy.yml  main.yml  tests.yml
app/: __init__.py  auth.py  data_analysis.py  data_collection.py  db_postgres.py  f1.py  schema.sql
app/static/: style.css
app/templates/: base.html  countdown.html  driver.html  health_check.html  index.html  login.html  messageboard.html  pitstops.html  register.html
templates/: index.html
tests/: conftest.py  data.sql  unit_test.py
tests/integration/: test_app.py  test_auth.py  test_data_analysis.py  test_data_collection.py  test_db.py
worker/: broker.py
