[tool.poetry]
name = "web app"
version = "0.1.0"
description = " increasing your chances of success."
authors = ["Genesis Zhong"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
Flask-Login = "^0.6.2"
Flask = "^2.2.3"
bleach = "^6.0.0"
SQLAlchemy = "^2.0.9"
alembic = "^1.10.3"
pytest = "^7.3.0"
pytest-flask = "^1.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"